
// command line : Excel_Converter.exe D:\svn\baseball\doc\design\excel\code\excel_baseball_table_animation.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_client_locale_kor.txt D:\svn\baseball\doc\design\excel\code\excel_enum.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_db.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_game.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_item.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_shop.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_string_table.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_etc.txt D:\svn\baseball\doc\design\excel\code\excel_baseball_table_client.txt 


// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl__basicscore
{
	optional int32 win_tot = 1; 	// int32 [총전적_승] 토탈 승 카운트 
	optional int32 lose_tot = 2; 	// int32 [총전적_패] 토탈 패 카운트 
	optional int32 win_season = 3; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
	optional int32 lose_season = 4; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
	optional int32 win_continue = 5; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
	optional int32 win_tot_single = 6; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
	optional int32 lose_tot_single = 7; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
	optional int32 win_season_single = 8; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
	optional int32 lose_season_single = 9; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
	optional int32 win_continue_single = 10; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
}//massage s_tbl__basicscore



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl__playerbase
{
	optional int64 db_id = 1; 	// Tbl__PlayerBase_id_t [PK index] 선수 database table PK 
	optional int32 sid = 2; 	// Sys_PlayerCard_id_t [Sys_Player아이디] 구매한 선수카드의 번호(Sys_Player의 sid) 값이 0 이면 가상선수 
	optional int64 uid = 3; 	// Tbl_User_id_t [유저번호]  
	optional string pname = 4; 	// aname32_t [닉네임]  
	optional int32 city = 5; 	// EPlayerNationType [출신국가] 캐주얼야구 게임기획서 3차 (20111031).docx참조 
	optional string initial_name = 6; 	// aname32_t [이니셜] 생성시 세팅. 등뒤의이니셜글자. 중복가능 
	optional int32 back_number = 7; 	// int16 [백넘버] 생성시 세팅. 변경아이템으로 변경가능 
	optional int32 age = 8; 	// int16 [나이] 생성시 세팅. 
	optional int32 body_type = 9; 	// EPlayerBodyType [체형]  
	optional bool is_left = 10; 	// bool [좌우타입] 캐릭터의 좌우 구분 1이면 좌선수 0이면 우선수 
	optional int64 exp = 11; 	// int64 [경험치] 레벨은 경험치에 해당하는 Sys_PlayerLevel의 값에 따라 결정 
	optional int32 questcomplete_count = 12; 	// Sys_Quest_id_t [퀘스트완료_카운트] 완료 퀘스트 카운트 
	optional int64 last_game_result = 13; 	// Tbl_Result_id_t [마지막경기id] 마지막으로 플레이한 경기결과 식별자 
		optional int32 win_tot = 14; 	// int32 [총전적_승] 토탈 승 카운트 
		optional int32 lose_tot = 15; 	// int32 [총전적_패] 토탈 패 카운트 
		optional int32 win_season = 16; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season = 17; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue = 18; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
		optional int32 win_tot_single = 19; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
		optional int32 lose_tot_single = 20; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
		optional int32 win_season_single = 21; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season_single = 22; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue_single = 23; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
	optional string skill_sticker = 24; 	// aname1024_t [특수능력이름] Sys_PlayeSkillSticker에서의   semicolon로 구분되어 여러개입력 
	optional int32 is_deleted = 25; 	// int16 [is_deleted]  
	optional string date_insert = 26; 	// SYSTEMTIME [등록시간] 최초게임등록일 
	optional string date_update = 27; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
	optional int32 elo_point = 28; 	// int32 [ELO_포인트] 경기마다 캐릭터에 갱신되는 매칭용 포인트 
	optional int64 team = 29; 	// Tbl_Team_id_t [소속팀id] 소속된 팀번호 
}//massage s_tbl__playerbase



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_friend
{
	optional int64 db_id = 1; 	// Tbl_Friend_id_t [id]  
	optional int64 uid = 2; 	// Tbl_User_id_t [유저번호]  
	optional int64 uid_fiend = 3; 	// Tbl_User_id_t [친구번호]  
	optional string nic_fiend = 4; 	// aname32_t [친구이름]  
	optional bool is_blocked = 5; 	// bool [is_blocked] 블랙리스트이냐? 
	optional int32 is_deleted = 6; 	// int16 [is_deleted]  
	optional int32 win_tot = 7; 	// int32 [친구-총전적_승] 토탈 승 카운트 
	optional int32 lose_tot = 8; 	// int32 [친구-총전적_패] 토탈 패 카운트 
	optional int32 win_season = 9; 	// int32 [친구-시즌전적_승] 시즌 승 카운트(3개월) 
	optional int32 lose_season = 10; 	// int32 [친구-시즌전적_패] 시즌 패 카운트(3개월) 
	optional int32 win_continue = 11; 	// int16 [친구-연승] 연속으로 승리한 개수. 음수면 연패 
}//massage s_tbl_friend



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_item
{
	optional int64 db_id = 1; 	// Tbl_Item_id_t [고유식별자] db pk 
	optional int32 sid = 2; 	// Sys__ItemBase_id_t [구매한 아이템종류] Sys__ItemBase_id_t 
	optional int32 category = 3; 	// EItemCategory [대분류] 장비 스텁 소비 구분 
	optional int64 uid = 4; 	// Tbl_User_id_t [소유자id]  
	optional int64 used_player_id = 5; 	// Tbl__PlayerBase_id_t [귀속된선수ID] 귀속된 선수id이며 소모용아이템은 특별히귀속되지않고쓴다.캐쉬인벤 or 게임인벤 환불여부가 결정된다 
	optional bool is_better = 6; 	// bool [소유한타자투수구분] true=타자 false=투수 
	optional string upgrade_level = 7; 	// aname32_t [업그레이드등급] baseball.xml에서 ITEM_UPGRADE_LOGIC 참조 
	optional string date_end_upgrade = 8; 	// SYSTEMTIME [업그레이드진행완료시간] 현제시간보다 미래의 시간이 세팅되면 업그레이드상태이다. 
	optional string etc_info = 9; 	// aname256_t [기타정보] 등번호 아이템:BACKNUM=등번호. 마킹아이템:MARK=NAME. INSERT_TYPE=Q:NAME | BONUS | ADMIN | SHOP 
	optional bool is_equiped = 10; 	// bool [장착상태] 장착아이템의경우 장착상태인지 여부 
	optional string date_expire = 11; 	// SYSTEMTIME [기간제아이템의사용시간] 기간제아이템의경우 사용가능한 시간 
	optional string date_insert = 12; 	// SYSTEMTIME [구매한날짜] 구매한날짜 
	optional string date_update = 13; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
	optional int32 is_deleted = 14; 	// int16 [삭제플레그] 아이템이 삭제된것.또는 어뷰징으로 제제상태 
	optional int32 state = 15; 	// EItemState [아이템상태]  
	optional int32 use_count = 16; 	// int16 [사용가능한 경기횟수] 소비(컨슘)의경우 사용가능한 게임의 경기 횟수. 재료(스텁)의경우 보유갯수(중첩갯수) 장착아이템은 값이 0 
}//massage s_tbl_item



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_item_admin
{
	optional int64 db_id = 1; 	// Tbl_Item_id_t [고유식별자] db pk 
	optional int64 rid = 2; 	// Tbl_Result_id_t [게임결과식별자] 보상아이템의경우 해당경기결과 식별자 
	optional int32 bought_real_money = 3; 	// real_money_t [구매캐쉬] 구매시 사용한 리얼캐쉬 
	optional int32 bought_point_money = 4; 	// real_money_t [구매포인트] 구매시 사용한 포인트 
	optional int32 bought_game_money = 5; 	// game_money_t [구매게임머니] 구매시 사용한 게임머니 
	optional int32 item_buy_type = 6; 	// EItemBuyType [구매상태] 아이템획득경로 정보 ( 보상아이템  또는 상점구매  or 이벤트) 
	optional int32 shop_id = 7; 	// Sys_Shop_id_t [상점판매번호] 상점으로부터 구매한경우 상점판매정보 
}//massage s_tbl_item_admin



// -------------------------------------------------
// 구매한 패키지리스트
// -------------------------------------------------

message s_tbl_package
{
	optional int64 db_id = 1; 	// Tbl_Package_id_t [고유식별자] db pk 
	optional int32 sid_package = 2; 	// Sys_Package_id_t [구매한 아이템종류] Sys_Package_id_t 
	optional int64 uid = 3; 	// Tbl_User_id_t [소유자id]  
	optional string etc_info = 4; 	// aname256_t [기타정보] 등번호 아이템일때는 등번호. 마킹 아이템일때는 마킹글자를 저장. 
	optional string date_insert = 5; 	// SYSTEMTIME [구매한날짜] 구매한날짜 
	optional string date_update = 6; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
	optional int32 is_deleted = 7; 	// int16 [삭제플레그] 아이템이 삭제된것.또는 어뷰징으로 제제상태 
	optional int32 state = 8; 	// EItemState [아이템상태]  
}//massage s_tbl_package



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_pitcherskill
{
	optional int64 db_id = 1; 	// Tbl_PitcherSkill_id_t [고유번호]  
	optional int64 uid = 2; 	// Tbl_User_id_t [소유자id]  
	optional int64 pid = 3; 	// Tbl_PlayerPitcher_id_t [소유투수id] 디펄트명은 pp_name이다 
	optional int32 gesture = 4; 	// EGestureType [제스쳐타입] 제스쳐종류 
	optional int32 is_deleted = 5; 	// int16 [삭제플레그]  
	optional int32 exp = 6; 	// int32 [투수변화구 진행 시간] 각각의 변화구에 진행된 시간을 기록 
	optional int32 type = 7; 	// EPlayerBreakingBall [투수변화구종류] 투수 변화구종류 
}//massage s_tbl_pitcherskill



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_playerbetter
{
		optional int64 db_id = 1; 	// Tbl__PlayerBase_id_t [PK index] 선수 database table PK 
		optional int32 sid = 2; 	// Sys_PlayerCard_id_t [Sys_Player아이디] 구매한 선수카드의 번호(Sys_Player의 sid) 값이 0 이면 가상선수 
		optional int64 uid = 3; 	// Tbl_User_id_t [유저번호]  
		optional string pname = 4; 	// aname32_t [닉네임]  
		optional int32 city = 5; 	// EPlayerNationType [출신국가] 캐주얼야구 게임기획서 3차 (20111031).docx참조 
		optional string initial_name = 6; 	// aname32_t [이니셜] 생성시 세팅. 등뒤의이니셜글자. 중복가능 
		optional int32 back_number = 7; 	// int16 [백넘버] 생성시 세팅. 변경아이템으로 변경가능 
		optional int32 age = 8; 	// int16 [나이] 생성시 세팅. 
		optional int32 body_type = 9; 	// EPlayerBodyType [체형]  
		optional bool is_left = 10; 	// bool [좌우타입] 캐릭터의 좌우 구분 1이면 좌선수 0이면 우선수 
		optional int64 exp = 11; 	// int64 [경험치] 레벨은 경험치에 해당하는 Sys_PlayerLevel의 값에 따라 결정 
		optional int32 questcomplete_count = 12; 	// Sys_Quest_id_t [퀘스트완료_카운트] 완료 퀘스트 카운트 
		optional int64 last_game_result = 13; 	// Tbl_Result_id_t [마지막경기id] 마지막으로 플레이한 경기결과 식별자 
			optional int32 win_tot = 14; 	// int32 [총전적_승] 토탈 승 카운트 
			optional int32 lose_tot = 15; 	// int32 [총전적_패] 토탈 패 카운트 
			optional int32 win_season = 16; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
			optional int32 lose_season = 17; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
			optional int32 win_continue = 18; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
			optional int32 win_tot_single = 19; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
			optional int32 lose_tot_single = 20; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
			optional int32 win_season_single = 21; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
			optional int32 lose_season_single = 22; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
			optional int32 win_continue_single = 23; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
		optional string skill_sticker = 24; 	// aname1024_t [특수능력이름] Sys_PlayeSkillSticker에서의   semicolon로 구분되어 여러개입력 
		optional int32 is_deleted = 25; 	// int16 [is_deleted]  
		optional string date_insert = 26; 	// SYSTEMTIME [등록시간] 최초게임등록일 
		optional string date_update = 27; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
		optional int32 elo_point = 28; 	// int32 [ELO_포인트] 경기마다 캐릭터에 갱신되는 매칭용 포인트 
		optional int64 team = 29; 	// Tbl_Team_id_t [소속팀id] 소속된 팀번호 
	optional int32 batting_average = 30; 	// int16 [타율] 0.001 - 0.999 천분율로 표시 
	optional int32 continue_homerun_count = 31; 	// int16 [연속홈런수] 연속_홈런수 
	optional int32 homeruntotal_count = 32; 	// int16 [총_홈런수] 총_홈런수 
	optional int32 single_homerun_count = 33; 	// int16 [싱글홈런카운트] 싱글홈런 카운트 
	optional int32 tworun_homerun_count = 34; 	// int16 [더블홈런카운트] 더블홈런 카운트 
	optional int32 threerun_homerun_count = 35; 	// int16 [쓰리런홈런카운트] 쓰리런홈런 카운트 
	optional int32 grandslam_homerun_count = 36; 	// int16 [만루홈런카운트] 만루홈런 카운트 
	optional int32 one_hit_count = 37; 	// int16 [일루타카운트] 일루타 카운트 
	optional int32 double_hit_count = 38; 	// int16 [이루타카운트] 이루타 카운트 
	optional int32 triple_hit_count = 39; 	// int16 [삼루타카운트] 삼루타 카운트 
	optional int32 foul_hit_count = 40; 	// int16 [파울카운트] 파울 카운트 
	optional int32 out_hit_count = 41; 	// int16 [아웃카운트] 아웃 카운트 
	optional int32 score_count = 42; 	// int16 [점수카운트] 점수 카운트 
	optional int32 betting_type = 43; 	// EBatterAbility [타자타입] 타자 대투수 스킬 
	optional int32 betting_form = 44; 	// EBatterForm [타격폼] 타자 폼 
	optional int32 better_power = 45; 	// int16 [타자 파워]  
	optional int32 better_focus = 46; 	// int16 [타자 집중]  
	optional int32 better_power_buff = 47; 	// int16 [타자 파워 버프]  
	optional int32 better_focus_buff = 48; 	// int16 [타자 집중 버프]  
}//massage s_tbl_playerbetter



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_playerpitcher
{
		optional int64 db_id = 1; 	// Tbl__PlayerBase_id_t [PK index] 선수 database table PK 
		optional int32 sid = 2; 	// Sys_PlayerCard_id_t [Sys_Player아이디] 구매한 선수카드의 번호(Sys_Player의 sid) 값이 0 이면 가상선수 
		optional int64 uid = 3; 	// Tbl_User_id_t [유저번호]  
		optional string pname = 4; 	// aname32_t [닉네임]  
		optional int32 city = 5; 	// EPlayerNationType [출신국가] 캐주얼야구 게임기획서 3차 (20111031).docx참조 
		optional string initial_name = 6; 	// aname32_t [이니셜] 생성시 세팅. 등뒤의이니셜글자. 중복가능 
		optional int32 back_number = 7; 	// int16 [백넘버] 생성시 세팅. 변경아이템으로 변경가능 
		optional int32 age = 8; 	// int16 [나이] 생성시 세팅. 
		optional int32 body_type = 9; 	// EPlayerBodyType [체형]  
		optional bool is_left = 10; 	// bool [좌우타입] 캐릭터의 좌우 구분 1이면 좌선수 0이면 우선수 
		optional int64 exp = 11; 	// int64 [경험치] 레벨은 경험치에 해당하는 Sys_PlayerLevel의 값에 따라 결정 
		optional int32 questcomplete_count = 12; 	// Sys_Quest_id_t [퀘스트완료_카운트] 완료 퀘스트 카운트 
		optional int64 last_game_result = 13; 	// Tbl_Result_id_t [마지막경기id] 마지막으로 플레이한 경기결과 식별자 
			optional int32 win_tot = 14; 	// int32 [총전적_승] 토탈 승 카운트 
			optional int32 lose_tot = 15; 	// int32 [총전적_패] 토탈 패 카운트 
			optional int32 win_season = 16; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
			optional int32 lose_season = 17; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
			optional int32 win_continue = 18; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
			optional int32 win_tot_single = 19; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
			optional int32 lose_tot_single = 20; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
			optional int32 win_season_single = 21; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
			optional int32 lose_season_single = 22; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
			optional int32 win_continue_single = 23; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
		optional string skill_sticker = 24; 	// aname1024_t [특수능력이름] Sys_PlayeSkillSticker에서의   semicolon로 구분되어 여러개입력 
		optional int32 is_deleted = 25; 	// int16 [is_deleted]  
		optional string date_insert = 26; 	// SYSTEMTIME [등록시간] 최초게임등록일 
		optional string date_update = 27; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
		optional int32 elo_point = 28; 	// int32 [ELO_포인트] 경기마다 캐릭터에 갱신되는 매칭용 포인트 
		optional int64 team = 29; 	// Tbl_Team_id_t [소속팀id] 소속된 팀번호 
	optional int32 pitching_average = 30; 	// int16 [방어율] 0.001 - 0.999 천분율로 표시 
	optional int32 hit_count = 31; 	// int16 [피안타율] 피안타율 
	optional int32 strikeout_count = 32; 	// int16 [탈삼진수] 탈삼진수 
	optional int32 homerun_pitching_count = 33; 	// int16 [피홈런수] 피홈런수 
	optional int32 continue_strikeout_count = 34; 	// int16 [연속삼진수] 연속삼진수 
	optional int32 continue_homerun_pitching_count = 35; 	// int16 [연속피홈런수] 연속피홈런수 
	optional int32 pitcher_type = 36; 	// EPitcherAbility [투수타입] 투수 대타자 스킬 
	optional int32 pitcher_form = 37; 	// EPitcherForm [투구폼] 투수 폼 
	optional int32 pitcher_control = 38; 	// int16 [투수 제구]  
	optional int32 pitcher_ballspeed = 39; 	// int16 [투수 구속]  
	optional int32 pitcher_control_buff = 40; 	// int16 [투수 제구 버프]  
	optional int32 pitcher_ballspeed_buff = 41; 	// int16 [투수 구속 버프]  
	optional int32 pitcher_breakingball_value_buff = 42; 	// int16 [투수 변화구 수치 버프]  
}//massage s_tbl_playerpitcher



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_quest
{
	optional int64 db_id = 1; 	// Tbl_Quest_id_t [고유번호]  
	optional int32 quest_sid = 2; 	// Sys_Quest_id_t [수행한 퀘스트 sid] 디펄트명은 pp_name이다 
	optional int64 uid = 3; 	// Tbl_User_id_t [유저id]  
	optional string date_insert = 4; 	// SYSTEMTIME [등록시간] 최초 수행 등록일 
	optional string date_done = 5; 	// SYSTEMTIME [완료시간] 완료시 시간 
	optional string info = 6; 	// aname256_t [수행 정보] 퀘스트별 수행시 기록될 파라미터 
	optional int32 done_count = 7; 	// int32 [수행한 횟수]  
}//massage s_tbl_quest



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_result
{
	optional int64 db_id = 1; 	// Tbl_Result_id_t [game고유번호]  
	optional bool is_singlemode = 2; 	// bool [is_singlemode] 0=멀티플레이 1=싱글플레이 
	optional int64 win_uid = 3; 	// Tbl_User_id_t [고유번호] 승자 고유번호 
	optional int64 win_better = 4; 	// Tbl_PlayerBetter_id_t [타자 pid] 승자 
	optional int64 win_pitcher = 5; 	// Tbl_PlayerPitcher_id_t [투수 pid] 승자 
	optional int64 win_team = 6; 	// Tbl_Team_id_t [팀id]  
	optional int32 win_score = 7; 	// int8 [승자스코어]  
	optional int32 win_reward_exp = 8; 	// int32 [승자 보상경험치] 플레이어1의 보상경험치( 투수타자모두지급) 
	optional int32 win_reward_gamemoney = 9; 	// game_money_t [승자 보상게임머니] 보상게임머니 
	optional int64 lose_uid = 10; 	// Tbl_User_id_t [고유번호] 패자 고유번호 
	optional int64 lose_better = 11; 	// Tbl_PlayerBetter_id_t [타자 pid] 패자 
	optional int64 lose_pitcher = 12; 	// Tbl_PlayerPitcher_id_t [투수 pid] 패자 
	optional int64 lose_team = 13; 	// Tbl_Team_id_t [패자팀id]  
	optional int32 lose_score = 14; 	// int8 [패자스코어]  
	optional int32 lose_reward_exp = 15; 	// int32 [패자 보상경험치] 보상경험치 
	optional int32 lose_reward_gamemoney = 16; 	// game_money_t [패자 보상게임머니] 보상게임머니 
	optional int32 play_time_sec = 17; 	// int32 [플레이시간] 플레이 한 시간(초) 
	optional int64 pp_point = 18; 	// int64 [피망플러스포인트]  
	optional string time_end = 19; 	// SYSTEMTIME [게임종료시간] 플레이 시간 (2012-12-15 13:53:15) 
}//massage s_tbl_result



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_roundresult
{
	optional int64 db_id = 1; 	// Tbl_RoundResult_id_t [고유번호] 일별 파티션 키 
	optional int64 grid = 2; 	// Tbl_Result_id_t [Tbl_Result_M의 고유번호]  
	optional int32 round_number = 3; 	// int8 [라운드번호] 1부터시작. 1~10은 라운드 한게임의 토탈집계는 Tbl_Result에 저장 
	optional bool is_left = 4; 	// bool [투수의 좌투우투 구분] 캐릭터의 좌우 구분 1이면 좌선수 0이면 우선수 
	optional int32 used_breakingball = 5; 	// EPlayerBreakingBall [투수의 사용 구종] 사용한 구종의 종류 
	optional int32 used_breakingball_speed = 6; 	// int16 [투수의 사용 구종의 구속] 사용한 구종의 속도 
	optional int32 used_pitcherability = 7; 	// EPitcherAbility [사용하고 있는 투수의 스킬(변화구 제외)] 스텟에 영향을 준 투수의 특수능력 
	optional int32 pitching_rhythm_judge = 8; 	// ERhythmJudge [투구 시 제구 타이밍] 투구 시 제구 타이밍의 종류 
	optional int32 used_pitcher_itemcategoryequipment = 9; 	// EItemCategoryEquipment [투수의 사용하고 있는 아이템] 스텟에 영향을 준 투수의 아이템 
	optional bool used_pitcher_counter = 10; 	// bool [투수의 카운터 사용] 0=사용하지 않앗음 1=사용 하였음 
	optional int32 used_batterability = 11; 	// EBatterAbility [사용하고 있는 타자의 스킬] 스텟에 영향을 준 타자의 특수능력 
	optional int32 used_batting_fullpower = 12; 	// EHitType [타자 히트 시 풀파워 사용] 타자 히트의 종류(일반히트_스트롱히트_헛스윙_대기상태) 
	optional int32 batting_timing_judge = 13; 	// EHitTimmingType [타격 시 타격 타이밍] 타격 시 타이밍 종류(veryfast_fast_goodfast_perfect_goodslow_slow_veryslow) 
	optional int32 used_batter_itemcategoryequipment = 14; 	// EItemCategoryEquipment [타자의 사용하고 있는 아이템] 스텟에 영향을 준 타자의 아이템 
	optional bool used_batter_counter = 15; 	// bool [타자의 카운터 사용] 0=사용하지 않앗음 1=사용 하였음 
	optional int64 uid_attack = 16; 	// Tbl_User_id_t [uid_attack] 공격자 
	optional int32 score = 17; 	// int8 [better의점수]  
	optional int32 base_runner_state = 18; 	// int8 [출루한주자수] bit flag로 출루한 주자상태를 표시한다. 1루는 2^0 최대는 xml에서  i_max_runner_per_game=19이다 
	optional int32 hit_type = 19; 	// EBatterHitType [안타종류] 0=아웃 1일루타 2이루타 3삼루타 4싱글홈런 5더블홈런 6 
}//massage s_tbl_roundresult



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_team
{
	optional int64 db_id = 1; 	// Tbl_Team_id_t [고유번호]  
	optional string name = 2; 	// aname32_t [팀이름] 디펄트명은 pp_name이다 
	optional int64 uid = 3; 	// Tbl_User_id_t [유저id]  
	optional int64 pid_better = 4; 	// Tbl_PlayerBetter_id_t [타자]  
	optional int64 pid_pitcher = 5; 	// Tbl_PlayerPitcher_id_t [투수]  
		optional int32 win_tot = 6; 	// int32 [총전적_승] 토탈 승 카운트 
		optional int32 lose_tot = 7; 	// int32 [총전적_패] 토탈 패 카운트 
		optional int32 win_season = 8; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season = 9; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue = 10; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
		optional int32 win_tot_single = 11; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
		optional int32 lose_tot_single = 12; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
		optional int32 win_season_single = 13; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season_single = 14; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue_single = 15; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
	optional int32 is_deleted = 16; 	// int16 [삭제플레그] 아이템이 삭제된것.또는 어뷰징으로 제제상태 
}//massage s_tbl_team



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_title
{
	optional int64 db_id = 1; 	// Tbl_Title_id_t [고유번호]  
	optional int64 qid = 2; 	// Tbl_Quest_id_t [수행한 퀘스트 qid] 칭호를 획득한 퀘스트 db id 
	optional int32 title_sid = 3; 	// Sys_Title_id_t [타이틀id] 타이틀 정보 
	optional int32 group = 4; 	// int32 [title_group] 타이틀 그룹 
	optional int32 object_type = 5; 	// EBaseballObjectType [오브젝트타입] 유저 타자 투수 팀 구분 
	optional int64 oid = 6; 	// int64 [Ojectid]  
	optional string date_update = 7; 	// SYSTEMTIME [수정시간] 최근업데이트일 
	optional string date_insert = 8; 	// SYSTEMTIME [등록시간] 획득일 
}//massage s_tbl_title



// -------------------------------------------------
// 설명없음
// -------------------------------------------------

message s_tbl_user
{
	optional int64 db_id = 1; 	// Tbl_User_id_t [고유번호] db pk 피망에서 온 id를 그대로 사용 
	optional string uname = 2; 	// aname32_t [닉네임] 베이스볼에서의 유저닉네임 
	optional int32 discon_tot = 3; 	// int32 [총Disconnect수] 게임중간에 나간수 
		optional int32 win_tot = 4; 	// int32 [총전적_승] 토탈 승 카운트 
		optional int32 lose_tot = 5; 	// int32 [총전적_패] 토탈 패 카운트 
		optional int32 win_season = 6; 	// int32 [시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season = 7; 	// int32 [시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue = 8; 	// int16 [연승] 연속으로 승리한 개수. 음수면 연패 
		optional int32 win_tot_single = 9; 	// int32 [싱글-총전적_승] 토탈 승 카운트 
		optional int32 lose_tot_single = 10; 	// int32 [싱글-총전적_패] 토탈 패 카운트 
		optional int32 win_season_single = 11; 	// int32 [싱글-시즌전적_승] 시즌 승 카운트(3개월) 
		optional int32 lose_season_single = 12; 	// int32 [싱글-시즌전적_패] 시즌 패 카운트(3개월) 
		optional int32 win_continue_single = 13; 	// int16 [싱글-연승패] 연속으로 승리한 개수. 음수면 연패 
	optional int32 pitcher_tot_strikeout = 14; 	// int16 [탈삼진수] 투수총_탈삼진 
	optional int32 pitcher_tot_average_level = 15; 	// int16 [투수총평균_레벨] 투수총평균_레벨 멀로 평균을 낼것인가 
	optional int32 better_tot_homerun = 16; 	// int16 [총_홈런수] 타자총_홈런 
	optional int32 better_tot__average_level = 17; 	// int16 [타자총평균_레벨] 타자총평균_레벨 
	optional int32 cash_item_buy_count = 18; 	// int16 [캐쉬템구매갯수] 캐쉬템구매갯수 
	optional string time_last_login = 19; 	// SYSTEMTIME [마지막로긴시간] 마지막로긴시간 
	optional string time_last_logout = 20; 	// SYSTEMTIME [마지막로그아웃시간] 마지막 로그아웃시간 
	optional int32 day_continue_attend = 21; 	// int16 [연속출석일수] 연속출석한 일수 
	optional string date_insert = 22; 	// SYSTEMTIME [등록시간] 최초게임등록일 
	optional string date_update = 23; 	// SYSTEMTIME [수정된시간] 마지막수정시간 
	optional int64 default_tid = 24; 	// Tbl_Team_id_t [기본팀번호] 기본팀 index 
	optional string option = 25; 	// aname1024_t [옵션] 옵션(클라에서임의로저장할내용) 
	optional int32 singleplay_gift_count = 26; 	// int16 [싱글플레이보상카운트] 하루에 발급된 싱글플레이 보상경험치 횟수 
	optional int32 is_deleted = 27; 	// int16 [삭제플레그] 아이템이 삭제된것.또는 어뷰징으로 제제상태 
	optional int64 game_money = 28; 	// int64 [게임머니]  
	optional string client_os = 29; 	// aname32_t [client_os] 클라 OS ( IOS / ANDROID ) 
	optional string client_networ = 30; 	// aname32_t [client_networ] 클라 네트웍(3G, 4G, WIFI) 
	optional int64 playtime_tot = 31; 	// int64 [총_플레이_타임] 총_플레이_타임(분) 
}//massage s_tbl_user






